# recursive-model-limits

./: .gitignore  README.md  main.py  pyproject.toml  verify_setup.py
conf/: config.yaml
conf/arch/: fake_recursive_vit.yaml  full_recursive_vit.yaml  recursive_vit.yaml  resnet.yaml  simple_cnn.yaml  vit.yaml
conf/dataset/: cifar10.yaml  cifar100.yaml
conf/scheduler/: cosine.yaml
conf/training/: default.yaml
notebooks/: test_datasets.ipynb  test_load_model.ipynb  test_models.ipynb
src/: datasets.py  train.py  train_state.py  trainer.py
src/models/: __init__.py  fake_recursive_vit.py  full_recursive_vit.py  loader.py  recursive_vit.py  resnet.py  simple_cnn.py  utils.py  vit.py
src/utils/: __init__.py  checkpoint.py  distributed.py  logging.py
